--- a/css/admin/main-layout.css
+++ b/css/admin/main-layout.css
@@ -342,3 +342,82 @@ td {
   background-color: #064973;
   color: #fff;
 }
+
+/* -------------------------------------------------------------- */
+
+/* 알람 모달창 */
+.div-alert-container {
+  position: fixed; /* ✅ fixed로 변경 */
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 65%);
+  z-index: 10;
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.alert-active { display: flex !important; }
+
+.div-alert-wrap {
+  display: inline-block;
+  min-width: 400px;
+  margin-bottom: 170px;
+  padding: 30px 40px;
+  background-color: #fff;
+
+  border-radius: 10px;
+}
+
+.div-alert-content {
+  font-weight: 500;
+  line-height: 1.5em;
+}
+
+.div-alert-btn-wrap {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 40px;
+}
+
+.div-alert-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 65px;
+  padding: 8px 10px;
+
+  border-radius: 5px;
+  letter-spacing: 3px;
+  cursor: pointer;
+}
+
+.div-alert-btn:not(:last-child) {
+  margin-right: 15px;
+}
+
+.alert-ok {
+  background-color: #064973;
+
+  border: 2px solid #064973;
+  color: #fff;
+  font-weight: 500;
+} 
+.alert-ok:hover {
+  background-color: #00263A;
+  border: 2px solid #00263A;
+} 
+
+.alert-no {
+  display: none;
+  border: 2px solid #999999;
+  color: #999999;
+  font-weight: 700;
+} 
+.alert-no:hover {
+  border: 2px solid #666666;
+  color: #666666;
+}
+.modal-coutinue { display: flex; }
