--- a/css/admin/main-layout.css
+++ b/css/admin/main-layout.css
@@ -114,7 +114,7 @@ img {
 .ul-sub-menu {
   position: absolute;
   width: 100%;
-  
+
   z-index: 10;
   /* 슬라이드 효과를 주기 위함 */
   max-height: 0;
@@ -287,6 +287,7 @@ td {
 }
 
 .t-btn { width: 60px; }
+.t-btn-group { width: 20px; }
 
 /* ------------------------------- */
 /* 버튼 */
