--- a/css/admin/main-layout.css
+++ b/css/admin/main-layout.css
@@ -290,6 +290,7 @@ td {
 .t-btn-group { width: 20px; }
 
 /* ------------------------------- */
+
 /* 버튼 */
 
 /* 탈퇴, 삭제 버튼 */
@@ -319,6 +320,7 @@ td {
   border: 1px solid #999999;
   color: #999999;
 }
+.btn-grey-line > span { margin-right: 10px; }
 .btn-grey-line:hover {
   border: 1px solid #666666;
   color: #666666;
