--- a/css/admin/admin-banner.css
+++ b/css/admin/admin-banner.css
@@ -54,6 +54,9 @@ tbody > tr > td:nth-child(2) { text-align: left; }
 
 .div-menu-option:hover { background-color: #f5f5f5; }
 
+/* 페이지 네이션 */
+#DIV-PAGENATION-WRAP { margin-top: 90px; }
+
 /* -------------------------------------------------------------- */
 
 /* 배너 상세 페이지 */
