--- a/css/admin/admin-banner.css
+++ b/css/admin/admin-banner.css
@@ -54,12 +54,12 @@ tbody > tr > td:nth-child(2) { text-align: left; }
 
 .div-menu-option:hover { background-color: #f5f5f5; }
 
-/* 페이지 네이션 */
+/* 페이지네이션 */
 #DIV-PAGENATION-WRAP { margin-top: 90px; }
 
 /* -------------------------------------------------------------- */
 
-/* 배너 상세 페이지 */
+/* 배너 작성, 상세 페이지의 배너 이미지 */
 #DIV-BANNER-IMG {
   width: 100%;
   aspect-ratio: 1080 / 550;
@@ -69,6 +69,55 @@ tbody > tr > td:nth-child(2) { text-align: left; }
   overflow: hidden;
 }
 
+/* -------------------------------------------------------------- */
+
+/* 배너 작성 페이지 */
+#DIV-BANNER-IMG-WRAP {
+  margin-top: 10px;
+  margin-left: 155px;
+  max-width: 100%;
+}
+
+/* 이미지 등록 시 같이 나타낼 이미지 명 */
+.div-img-name {
+  margin: 5px 0;
+
+  color: #999999;
+  font-size: 16px;
+  text-align: right;
+}
+
+/* 사용 기간 입력 칸 */
+input[type='date'] {
+  position: relative;
+  font-family: inherit;
+}
+
+input[type='date']::-webkit-calendar-picker-indicator {
+  position: absolute; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /* 배경, 글자 투명하게하여 아이콘 안보이도록 설정 */
+  background: transparent; 
+  color: transparent; 
+  cursor: pointer;
+}
+
+.input-date {
+  width: 200px;
+  text-align: center;
+}
+
+.span-period {
+  margin: 0 15px;
+  color: #999999;
+}
+
+/* -------------------------------------------------------------- */
+
+/* 배너 상세 페이지 */
 .banner-period-wrap {
   display: flex;
   align-items: center;
